# airbyte-python-cdk

./: .pre-commit-config.yaml  .prettierignore  Dockerfile  LICENSE_SHORT  README.md  pyproject.toml  ruff.toml
.github/: dependabot.yml
.github/workflows/: autofix-command.yml  cdk-publish.yml  connector-tests.yml  docker-build.yml  job_status_check.yml  pdoc_preview.yml  pdoc_publish.yml  poetry-lock-command.yml  publish-manually.yml  publish_sdm_connector.yml  pypi_publish.yml  pytest_fast.yml  pytest_matrix.yml  python_lint.yml  python_pytest.yml  test-command.yml  test-connectors.yml
airbyte_cdk/: __init__.py  config_observation.py  connector.py  entrypoint.py  exception_handler.py  logger.py  manifest.yaml
airbyte_cdk/cli/connector_builder_test_read/: __init__.py  connector_builder_handler.py  run.py
airbyte_cdk/cli/source_declarative_manifest/: __init__.py  _run.py  manifest.yaml
airbyte_cdk/cli/source_declarative_manifest/sample_files/: config.json
airbyte_cdk/connector_builder/: connector_builder_handler.py  main.py  message_grouper.py  models.py
airbyte_cdk/destinations/: __init__.py  destination.py
airbyte_cdk/destinations/vector_db_based/: __init__.py  config.py  document_processor.py  embedder.py  indexer.py  test_utils.py  utils.py  writer.py
airbyte_cdk/models/: __init__.py  airbyte_protocol.py  airbyte_protocol_serializers.py  file_transfer_record_message.py  well_known_types.py
airbyte_cdk/sources/: __init__.py  abstract_source.py  config.py  connector_state_manager.py  http_config.py  http_logger.py  source.py  types.py
airbyte_cdk/sources/concurrent_source/: concurrent_read_processor.py  concurrent_source.py  concurrent_source_adapter.py  partition_generation_completed_sentinel.py  stream_thread_exception.py  thread_pool_manager.py
airbyte_cdk/sources/declarative/: concurrent_declarative_source.py  declarative_component_schema.yaml  declarative_source.py  declarative_stream.py  exceptions.py  manifest_declarative_source.py  types.py  yaml_declarative_source.py
airbyte_cdk/sources/declarative/async_job/: job.py  status.py  (+4 more)
airbyte_cdk/sources/embedded/: base_integration.py  catalog.py  runner.py  tools.py
airbyte_cdk/sources/file_based/: __init__.py  exceptions.py  file_based_source.py  file_based_stream_reader.py  remote_file.py  schema_helpers.py  types.py
airbyte_cdk/sources/message/: __init__.py  repository.py
airbyte_cdk/sources/streams/: __init__.py  availability_strategy.py  call_rate.py  core.py
airbyte_cdk/sources/utils/: __init__.py  casing.py  record_helper.py  schema_helpers.py  slice_logger.py  transform.py  types.py
airbyte_cdk/sql/: constants.py  exceptions.py  secrets.py  types.py
airbyte_cdk/sql/_util/: name_normalizers.py
airbyte_cdk/sql/shared/: catalog_providers.py  sql_processor.py
airbyte_cdk/test/: catalog_builder.py  entrypoint_wrapper.py  state_builder.py
airbyte_cdk/test/declarative/: __init__.py  connector_interfaces.py
airbyte_cdk/test/fixtures/: general.py
airbyte_cdk/test/mock_http/: __init__.py  matcher.py  mocker.py  request.py  response.py  response_builder.py
airbyte_cdk/test/utils/: data.py  http_mocking.py  manifest_only_fixtures.py  reading.py
airbyte_cdk/testing/proxy_cache/: addon.py
airbyte_cdk/utils/: __init__.py  airbyte_secrets_utils.py  analytics_message.py  constants.py  datetime_format_inferrer.py  event_timing.py  is_cloud_environment.py  mapping_helpers.py  message_utils.py  oneof_option_config.py  print_buffer.py  schema_inferrer.py  slice_hasher.py  spec_schema_transformations.py  stream_status_utils.py  traced_exception.py
docs/: generate.py
reference_docs/: generate_rst_schema.py
reference_docs/_source/: conf.py
sample_files/: catalog.json  config.json
unit_tests/: __init__.py  conftest.py  test_config_observation.py  test_connector.py  test_counter.py  test_entrypoint.py  test_exception_handler.py  test_logger.py  test_secure_logger.py
unit_tests/connector_builder/: test_connector_builder_handler.py  test_message_grouper.py  utils.py
unit_tests/destinations/: test_destination.py
unit_tests/destinations/vector_db_based/: config_test.py  document_processor_test.py  embedder_test.py  writer_test.py
unit_tests/resources/source_pokeapi_w_components_py/: components.py
unit_tests/source_declarative_manifest/: conftest.py  test_source_declarative_w_custom_components.py
unit_tests/source_declarative_manifest/resources/: valid_py_components_code.py  valid_py_components_manifest.yaml
unit_tests/sources/: conftest.py  test_abstract_source.py  test_config.py  test_connector_state_manager.py  test_http_logger.py  test_integration_source.py  test_proxy_cache.py  test_source.py  test_source_read.py
unit_tests/sources/concurrent_source/: test_concurrent_source_adapter.py
unit_tests/sources/declarative/: external_component.py  test_concurrent_declarative_source.py  test_declarative_stream.py  test_manifest_declarative_source.py  test_types.py  test_yaml_declarative_source.py
unit_tests/sources/embedded/: test_embedded_integration.py
unit_tests/sources/file_based/: helpers.py  in_memory_files_source.py  test_file_based_scenarios.py  test_file_based_stream_reader.py  test_scenarios.py  test_schema_helpers.py
unit_tests/sources/fixtures/: source_test_fixture.py
unit_tests/sources/message/: test_repository.py
unit_tests/sources/mock_server_tests/: mock_source_fixture.py  test_mock_server_abstract_source.py  test_resumable_full_refresh.py
unit_tests/sources/streams/: test_call_rate.py  test_stream_read.py  test_streams_core.py
unit_tests/sources/utils/: test_record_helper.py  test_schema_helpers.py  test_slice_logger.py  test_transform.py
unit_tests/test/: test_declarative_test_suites.py  test_entrypoint_wrapper.py
unit_tests/test/mock_http/: test_matcher.py  test_mocker.py  test_request.py  test_response_builder.py
unit_tests/utils/: test_datetime_format_inferrer.py  test_mapping_helpers.py  test_message_utils.py  test_rate_limiting.py  test_schema_inferrer.py  test_secret_utils.py  test_stream_status_utils.py  test_traced_exception.py
(+377 files in other folders)
